neutron (2:9.0.0~b1-2) UNRELEASED; urgency=medium

  * Activates qos policies by default.
  * neutron-server loads fwaas_driver.ini if it is present in /etc/neutron.

 -- Thomas Goirand <zigo@debian.org>  Fri, 17 Jun 2016 14:33:59 +0200

neutron (2:9.0.0~b1-1) experimental; urgency=medium

  * New upstream release.
  * Fix neutron-metadata server templates.
  * Fixed (build-)depends for this release.
  * Drop Return_oslo_config_Opts_to_config_generator.patch applied upstream.
  * Added fix-requirements.txt.patch.
  * Disable auto_clean as it requires a higher version of setuptools, which
    isn't in the sbuild host for Jessie.
  * Using ostestr directly, not using ./run_tests.sh anymore.

 -- Thomas Goirand <zigo@debian.org>  Thu, 09 Jun 2016 00:59:14 +0200

neutron (2:8.0.0-2) unstable; urgency=medium

  [ Ondřej Nový ]
  * Standards-Version is 3.9.8 now (no change)
  * d/copyright: Changed source URL to https protocol

  [ Thomas Goirand ]
  * Updated Portuguese translation for debconf messages (Closes: #821050).
  * Updated Dutch translation for debconf messages (Closes: #822965).

 -- Thomas Goirand <zigo@debian.org>  Thu, 19 May 2016 11:22:30 +0200

neutron (2:8.0.0-1) unstable; urgency=medium

  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Thu, 07 Apr 2016 18:29:42 +0200

neutron (2:8.0.0~rc3-1) unstable; urgency=medium

  * New upstream release.
  * Uploading to unstable.
  * Fixed (build-)depends for this release.
  * Added missing copyright holders (Closes: #816208).
  * Failed tests fails the build.

 -- Thomas Goirand <zigo@debian.org>  Tue, 05 Apr 2016 10:07:40 +0200

neutron (2:8.0.0~rc1-2) experimental; urgency=medium

  * Do not use Keystone admin auth token to register API endpoints.

 -- Thomas Goirand <zigo@debian.org>  Tue, 29 Mar 2016 13:50:43 +0000

neutron (2:8.0.0~rc1-1) experimental; urgency=medium

  * New upstream release.
  * Fixed ryu version to 3.30, since I could upload it to Experimental after