@@ -2,8 +2,9 @@ neutron (2:9.0.0~b1-2) UNRELEASED; urgency=medium
 
   * Activates qos policies by default.
   * neutron-server loads fwaas_driver.ini if it is present in /etc/neutron.
+  * Refresh the core_plugin selection logic so it's up-to-date.
 
- -- Thomas Goirand <zigo@debian.org>  Fri, 17 Jun 2016 14:33:59 +0200
+ -- Thomas Goirand <zigo@debian.org>  Fri, 01 Jul 2016 20:42:55 +0200
 
 neutron (2:9.0.0~b1-1) experimental; urgency=medium
 
